Update and rename style.css to default.css

--- a/default.css
+++ b/default.css
@@ -28,6 +28,7 @@
 @import url(nice-select.css);
 
 /*--------------------------------------------------------------------- skeleton ---------------------------------------------------------------------*/
+/* I have made changes on the background page, add the border, changed the border type, change the padding type, change the font color, font size as well as font color, adjusted the size between texts. */
 
 * {
      box-sizing: border-box !important;
